Fixing spacing on list slideshows, minor updates to system manual

--- a/AV/List/listArrayCON.css
+++ b/AV/List/listArrayCON.css
@@ -11,7 +11,7 @@
 }
 
 #AlistInsertCON {
-  height: 330px;
+  height: 350px;
 }
 
 #AlistInsertCON .jsavcanvas {
