--- a/AV/List/listArrayVizCON.css
+++ b/AV/List/listArrayVizCON.css
@@ -10,19 +10,6 @@
   max-height: 30px !important;
 }
 
-#AlistInsertCON {
-  height: 330px;
-}
-
-#AlistInsertCON .jsavcanvas {
-  margin-top: 20px;
-}
-
-#AlistInsertCON .jsavcode {
-  margin-left: 285px;
-  width: 560px;
-}
-
 #AlistRemoveCON {
   height: 375px;
 }
