--- a/AV/List/listQueueCON.css
+++ b/AV/List/listQueueCON.css
@@ -95,7 +95,7 @@
   width:535px;
 }
 #LQueueEnqueueCON {
-  height: 270px;
+  height: 280px;
 }
 #LQueueEnqueueCON .jsavoutput.jsavline {
   height: 40px;
@@ -109,7 +109,7 @@
   width:450px;
 }
 #LQueueDequeueCON {
-  height: 350px;
+  height: 340px;
 }
 #LQueueDequeueCON .jsavoutput.jsavline {
   height: 40px;
@@ -120,5 +120,5 @@
   position: relative;
   left: 150px;
   top: -10px;
-  width:550px;
+  width:570px;
 }
